# codacom

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  execute.sh  update_whitelist.sh  vars.in
html/: conf.php  contact.php  demo-handler.php  demo.js  demo.php  expand.php  header.php  index.php  install.php  licence.php  main.css  main.js  model.php  use.php  vars.sh
html/data/template/: session_conf.php  vars.sh
m4/: igraph.m4
methods/: Makefile.am  Makefile.in  execute.sh  scrap_web.sh  template.sh  timeout.sh
methods/betweenness/: execute.sh
methods/clauset/: execute.sh
methods/conclude/: execute.sh.inst
methods/igraph/: Makefile.am  Makefile.in  algorithms.cpp  algorithms.h  main.cpp
methods/infomap/: execute.sh
methods/k-core/: Makefile.am  Makefile.in  main.cpp
methods/label_prop/: execute.sh
methods/leading_eigenvector/: execute.sh
methods/lexdfs/: Makefile.am  Makefile.in  execute.sh  import_dendogram.cpp  main.cpp
methods/lexdfs/search/: CommonIntervalDetection.cpp  CommonIntervalDetection.hpp  CommunityDetection.cpp  CommunityDetection.hpp  EdgeWeightDetection.cpp  EdgeWeightDetection.hpp  Graph.cpp  Graph.hpp  LexDFS.cpp  LexDFS.hpp  OverlappingEdgeColors.cpp  OverlappingEdgeColors.hpp  Parameters.cpp  Parameters.hpp  QualityMaximisation.cpp  QualityMaximisation.hpp
methods/louvain/: Makefile.am  Makefile.in  execute.sh.inst
methods/mcl/: execute.sh
methods/scd/: execute.sh.inst
methods/spinglass/: execute.sh
methods/walktrap/: execute.sh
src/analysis/: Makefile.am  Makefile.in  alg_full_report.cpp  algs_correlation.cpp  algs_quality.cpp  collect_spearman.py  mean_results.py  quality_to_rank.py  raw_time_to_table.py
src/conversion/: Makefile.am  Makefile.in  clustering_to_graphml.cpp  clustering_to_quotient.cpp  data_to_tex.py
src/libcomparison/: CMProvider.cpp  CMProvider.hpp  Makefile.am  Makefile.in  headers_libcomparison  targets_libcomparison
src/libcomparison/comparison/: AbstractCM.cpp  AbstractCM.hpp  FBCubedCM.cpp  FBCubedCM.hpp  NmiCM.cpp  NmiCM.hpp  OmegaIndexCM.cpp  OmegaIndexCM.hpp
src/libmisc/: Makefile.am  Makefile.in  file_operations.cpp  file_operations.hpp  sets.cpp  sets.hpp
src/libquality/: Makefile.am  Makefile.in  QFProvider.cpp  QFProvider.hpp  headers_libquality  targets_libquality
src/libquality/quality/: 1-CondSCQF.cpp  1-CondSCQF.hpp  1-CutRatioSCQF.cpp  1-CutRatioSCQF.hpp  AbstractAgglomerativeQF.cpp  AbstractAgglomerativeQF.hpp  AbstractQF.cpp  AbstractQF.hpp  AbstractSCQF.cpp  AbstractSCQF.hpp  AbstractSVQF.cpp  AbstractSVQF.hpp  ClustCoefSCQF.cpp  ClustCoefSCQF.hpp  ClustCoefSVQF.cpp  ClustCoefSVQF.hpp  CompactnessSCQF.cpp  CompactnessSCQF.hpp  ConductanceSCQF.cpp  ConductanceSCQF.hpp  FOMDSCQF.cpp  FOMDSCQF.hpp  FlakeODFSCQF.cpp  FlakeODFSCQF.hpp  LocalModularityQF.cpp  LocalModularityQF.hpp  MeanQF.cpp  MeanQF.hpp  ModularityDensityQF.cpp  ModularityDensityQF.hpp  ModularityQF.cpp  ModularityQF.hpp  NormClustCoefSCQF.cpp  NormClustCoefSCQF.hpp  NormConductanceSCQF.cpp  NormConductanceSCQF.hpp  PermanenceSVQF.cpp  PermanenceSVQF.hpp  SignificanceQF.cpp  SignificanceQF.hpp  (+6 more)
src/preprocessing/: Makefile.am  Makefile.in  simplify.cpp
src/tools/: Makefile.am  Makefile.in  bipartite_to_collaboration.py  change_var.sh  communities_to_membership.py  edgelist_to_adjacency.py  list_comparison_methods.cpp  list_qualities.cpp  membership_to_multi.py  reorder_edges_with_raw.py  test_compact.py  unicolumn_to_bicolumn.py
